# scalable-llm-eval-pipeline

./: .env.example  .gitignore  DEVELOPMENT.md  QUICKSTART.md  README.md  aggregate.py  app.py  cache.py  openai_provider.py  pyproject.toml  requirements.txt  touch
.github/workflows/: demo.yml
data/suites/: basic_v1.jsonl
examples/: 01_basic_eval.sh  sample_report.md  with_openai.py
examples/exploratory/: app.py  openai_provider.py
examples/run_sample/: report.md  summary.json
examples/sample_outputs/: summary.json
src/evalpipe/: __main__.py  aggregate.py  cli.py  compare.py  costs.py  evaluators.py  loader.py  pricing.py  prompt.py  report.py  runner.py  schema.py  storage.py
src/evalpipe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/evalpipe/cache/: simple_cache.py
src/evalpipe/evaluators/: __init__.py  contains.py  evaluators.py  exact.py  judge.py  numeric.py  refusal.py  regex.py  registry.py  schema.py
src/evalpipe/judge/: critic.py  rubric_v1.md
src/evalpipe/prompts/: basic_v1.txt  render.py
src/evalpipe/providers/: openai_provider.py
src/evalpipe/schemas/: evaluation_schema.py
tests/: test_aggregate.py  test_async_runner.py  test_evaluation_schema.py  test_evaluator_registry.py  test_evaluators.py  test_failure_aware_execution.py  test_generator_loader.py  test_large_input_smoke.py  test_prompt_hashing.py  test_prompt_render.py  test_runner.py  test_schema_loader.py  test_storage.py
