[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evalpipe"
version = "0.1.0"
description = "Scalable LLM evaluation pipeline"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0"
]

[project.scripts]
evalpipe = "evalpipe.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
